release | add application plugin and remove unused configurations